--- a/src/components/astro/Footer.astro
+++ b/src/components/astro/Footer.astro
@@ -1,3 +1,12 @@
-<div>
+---
+import Hills from "@/svg/hills.svg";
+---
+
+<div class="bg-base-200 relative w-full h-24 lg:h-[7.5vw] overflow-hidden -mb-[1px]">
+  <Hills
+    class="min-w-5xl w-full absolute lg:relative left-1/2 lg:left-0 -translate-x-1/2 lg:translate-0 fill-primary top-[1px]"
+  />
+</div>
+<div class="bg-primary pt-10 px-12 pb-30 flex flex-col">
   <slot />
 </div>
