--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,7 +15,7 @@ import Header from "@/components/astro/Header.astro";
     <Header>
       <h1 class="visually-hidden">The Kolenkos</h1>
       <p
-        class="font-serif text-center text-base-200 text-[clamp(1.75rem,3.5vw,3.5rem)] leading-[1.3em] tracking-tight md:max-w-full mx-auto"
+        class="font-serif text-center text-base-200 text-[clamp(1.75rem,3.5vw,3.5rem)] leading-[1.3em] tracking-tight max-w-[44ch] mx-auto"
       >
         You're invited to celebrate the wedding of <span class="lg:block">
           Taylor Diaz & Joshua Kolenko on September 17, 2026
