--- a/src/pages/code.astro
+++ b/src/pages/code.astro
@@ -6,6 +6,7 @@ import BaseLayout from "@/layouts/BaseLayout.astro";
 <BaseLayout
   title="The Kolenkos - Guest Access"
   description="Enter the access code to view Taylor and Josh's wedding website"
+  bodyClass="bg-base-200"
 >
   <main>
     <div class="px-8 pt-20 pb-10 items-center text-center">
