feat: slider buttons & homepage updates

--- a/src/components/astro/Footer.astro
+++ b/src/components/astro/Footer.astro
@@ -2,7 +2,7 @@
 import Hills from "@/svg/hills.svg";
 ---
 
-<div class="bg-base-200 relative w-full h-24 lg:h-[7.5vw] overflow-hidden -mb-[1px]">
+<div class="bg-base-200 relative w-full h-24 lg:h-[7.5vw] overflow-hidden -my-[1px]">
   <Hills
     class="min-w-5xl w-full absolute lg:relative left-1/2 lg:left-0 -translate-x-1/2 lg:translate-0 fill-primary top-[1px]"
   />
