--- a/src/components/astro/Header.astro
+++ b/src/components/astro/Header.astro
@@ -9,7 +9,7 @@ const hasSlot = Astro.slots.has("default");
   <slot />
 </div>
 <div
-  class="bg-base-content relative w-full h-32 md:h-[13.5vw] overflow-hidden lg:overflow-visible -mt-[1px]"
+  class="bg-base-content relative w-full h-32 md:h-[13.5vw] overflow-hidden lg:overflow-visible -my-[1px]"
 >
   <Mountain
     class="min-w-5xl w-full absolute lg:relative left-1/2 lg:left-0 -translate-x-1/2 lg:translate-0 fill-base-200 top-[1px]"
