fix: RSVP deadline

--- a/src/pages/rsvp.astro
+++ b/src/pages/rsvp.astro
@@ -16,15 +16,15 @@ import PageLayout from "@/layouts/PageLayout.astro";
       <h2 class="text-2xl mt-8 mb-2">Instructions</h2>
       <p class="mb-6">
         Please fill out the RSVP form <span class="md:hidden">below</span> to let us know if you will
-        be attending our wedding. Be sure to include any guests you would like to bring, any dietary
-        restrictions we should be aware of or any other information.
+        be attending our wedding. Be sure to include any guests you would like to bring, any dietary restrictions
+        we should be aware of or any other information.
       </p>
       <p>
         We can't guarantee that all guests are able to attend, we will do our best to accommodate
         everyone.
       </p>
       <h2 class="text-2xl mt-8 mb-2">RSVP deadline</h2>
-      <p>April 1, 2026</p>
+      <p>June 1, 2026</p>
       <h2 class="text-2xl mt-8 mb-2">Wedding information</h2>
       <p class="leading-7 flex gap-1 mt-0 mb-0">
         <i class="ph-light ph-calendar relative top-1 w-6 shrink-0"></i>September 17, 2026
